--- a/www/app/apps/docApprove/INV/invDetails.html
+++ b/www/app/apps/docApprove/INV/invDetails.html
@@ -235,6 +235,7 @@
           </ion-scroll>
         </ion-slide>
       </ion-slide-box>
+    </tab-slide-box>
   </ion-content>
   <!-- Footer Actions -->
   <ion-footer-bar align-title="right">
