--- a/www/app/apps/docApprove/TSK/tskDetails.html
+++ b/www/app/apps/docApprove/TSK/tskDetails.html
@@ -207,6 +207,7 @@
           </ion-scroll>
         </ion-slide>
       </ion-slide-box>
+    </tab-slide-box>
   </ion-content>
   <!-- Footer Actions -->
   <ion-footer-bar align-title="right">
