--- a/www/app/apps/phonebook/list.html
+++ b/www/app/apps/phonebook/list.html
@@ -23,10 +23,19 @@
     <div class="row">
 
       <div class="col col-input">
-        <ion-item class="item item-input">
-          <input class="pele_rtl text-right" type="text" placeholder="חיפוש לפי יחידה ארגונית" ng-model="org">
-          <i class="icon ion-arrow-down-b placeholder-icon"></i>
-        </ion-item>
+        <div class="list pele_ltr">
+
+          <label class="item item-input item-select">
+            <div class="input-label" style="content:'dd'">
+              <i class="icon ion-funnel placeholder-icon"></i>
+
+            </div>
+            <select class="pele_rtl text-right" ng-model="sectorId">
+              <option value="">חפש לפי חטיבה</option>
+              <option ng-repeat="sector in sectors" value="{{sector.id}}">{{sector.name}}</option>
+            </select>
+          </label>
+        </div>
       </div>
     </div>
     <div class="col push-top-20">
@@ -34,13 +43,13 @@
         <button ng-click="search()" class="round button icon-left ion-search button-positive">חיפוש</button>
       </div>
     </div>
-    <div class="col push-top-20">
+    <!--div class="col push-top-20">
       <div class="text-center push-top-20">
         <button class="button button-clear icon-right button-light ion-gear-b">
            פעולות
         </button>
       </div>
-    </div>
+    </div-->
     <div class="col">
       <div class="text-center">
         <button ng-click="modals.operunits.show()" class="button button-clear icon-right button-light ion-information-circled">
