--- a/www/app/apps/lead/report.html
+++ b/www/app/apps/lead/report.html
@@ -26,7 +26,7 @@
         <div class="list pele_ltr">
 
           <label class="item item-input item-select">
-            <div class="input-label">
+            <div class="input-label" style="content:'dd'">
               <i class="icon ion-funnel placeholder-icon"></i>
 
             </div>
