--- a/www/app/apps/phonebook/details.html
+++ b/www/app/apps/phonebook/details.html
@@ -1,25 +1,40 @@
 <ion-view cache-view="true">
   <ion-nav-buttons side="right">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon">
-    </button>
+    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+  </ion-nav-buttons>
+  <ion-nav-buttons side="left">
+    <button class="button button-icon icon ion-ios-search" ng-click="goSearchForm()"></button>
   </ion-nav-buttons>
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
-      <div class="title">{{title}} </div>
+      <div class="title">{{title}}
+      </div>
     </div>
   </ion-nav-title>
   <ion-content scroll="false" padding="true" id="phonebook_details">
-    <tab-slide-box tab="1">
+    <ion-scroll style="height:80%" ng-show="view=='newContact'" scrollx="false" delegate-handle="slide1Scroll">
+      <ion-item class="item item-input">
+        <input class="pele_rtl text-right" type="text" placeholder="חיפוש לפי שם פרטי/משפחה/שלוחה" ng-change="searchContacts()" ng-model="searchForm.term">
+        <i class="icon ion-funnel placeholder-icon"></i>
+      </ion-item>
+      <div>
+        <ion-list class="pele_rtl">
+          <ion-item class="item-text-wrap  item-avatar" ng-repeat="contact in contatcsList">{{contact.displayName}}
+            <img class="avatar" ng-if="contact.photos[0]" src="data:image/JPEG;base64,{{contact.photos[0].value}} ">
+          </ion-item>
+        </ion-list>
+      </div>
+    </ion-scroll>
+    <tab-slide-box tab="1" ng-show="view!='newContact'">
       <div class="tsb-icons">
         <div class="tsb-ic-wrp">
-          <ion-scroll has-bouncing="false" scrollX="false" direction="x" scrollY="false" class="tsb-hscroll">
-            <!--a href="#" ng-click="swalContact(contact)" class="">
-                <img  class="fab" src="img/new_icons/purple_add_contact.png "></a-->
+          <ion-scroll has-bouncing="false" scrollx="false" direction="x" scrolly="false" class="tsb-hscroll">
+            <!--a href="#" ng-click="swalContact(contact)" class=""> <img class="fab" src="img/new_icons/purple_add_contact.png "></a-->
             <a class="triangle-isosceles">
-            עץ ארגוני
+              עץ ארגוני
             </a>
             <a class="triangle-isosceles">
-            פרטי העובד
+              פרטי העובד
             </a>
           </ion-scroll>
         </div>
@@ -30,30 +45,34 @@
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
         <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
-          <ion-scroll scrollX="false" scrollX="false" delegate-handle="slide1Scroll">
+          <ion-scroll scrollx="false" delegate-handle="slide1Scroll">
 
             <h4 class="pele_rtl text-right">{{managerInfo.orgName}}</h4>
-            <!--h5 class="pele_rtl text-right"> הוסף לאנשי קשר :
-              <span class="pel-badge blue"><i ng-click="actions('members_tree',contact,contact.orgTree)" class="icon white medium ion-person-stalker"></i></span>
-              <span class="pel-badge blue"><i ng-click="actions('manager_tree',managerInfo,contact.orgTree)" class="icon white medium ion-ios-people"></i></span>
-           </h5-->
+            <!--h5 class="pele_rtl text-right"> הוסף לאנשי קשר : <span class="pel-badge blue"><i ng-click="actions('members_tree',contact,contact.orgTree)" class="icon white medium ion-person-stalker"></i></span> <span class="pel-badge blue"><i
+            ng-click="actions('manager_tree',managerInfo,contact.orgTree)" class="icon white medium ion-ios-people"></i></span> </h5-->
             <div class="item-section">
               <ul class="list pele_rtl text-right treeview level1">
                 <li class="direct_admin tree-item">
-                  <a ui-sref="app.phonebook.details({personId:member.personId})">
-                       {{contact.directManagerName}} </a>
+                  <a ui-sref="app.phonebook.details({personId:contact.directManagerNumber})">
+                    {{contact.directManagerName}}
+                  </a>
                   <ul class="list level2">
                     <li class="{{member.relation}} tree-item" ng-show="v.personId" ng-repeat="(k,v) in contact.tree">
                       <div class="links" ng-class="{'last':$last}"></div>
                       <a ui-sref="app.phonebook.details({personId:k})">
-                          <i ng-if="contact.personId==k" class="ion-android-person blue"></i>
-                          <span ng-class="{active:contact.personId==k}"> {{v.fullName}} </span>
+                        <i ng-if="contact.personId==k" class="ion-android-person blue"></i>
+                        <span ng-class="{active:contact.personId==k}">
+                          {{v.lastName}},
+                          {{v.firstName}}
+                        </span>
                       </a>
                       <ul ng-if="v.members.length" class="list level3">
                         <li class="{{member.relation}} tree-item" ng-repeat="member in v.members">
                           <div class="links" ng-class="{'last':$last}"></div>
                           <a ui-sref="app.phonebook.details({personId:member.personId})">
-                          {{member.fullName}} </a>
+                            {{member.lastName}},
+                            {{member.firstName}}
+                          </a>
                         </li>
                       </ul>
                     </li>
@@ -68,109 +87,124 @@
         <!------------------------------------------------------------------------------->
         <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
 
-          <ion-scroll class="pele_rtl text-right" scrollX="false" delegate-handle="slide1Scroll">
+          <ion-scroll class="pele_rtl text-right" scrollx="false" delegate-handle="slide1Scroll">
             <!-- Refresh to get the new posts -->
 
             <ul class="list">
               <li class="item">
-                <div class="blue text-center"><strong>{{contact.firstName}} {{contact.lastName}}</strong></div>
-                <div class="  text-center">
-                  <img class="contact-avatar" ng-if="contact.pic" ng-src="data:image/JPEG;base64,{{contact.pic}}" /-->
-                  <img class="no-contact-pic" ng-if="!contact.pic" ng-src="img/new_icons/blue_avatar.png" />
+                <div class="blue text-center">
+                  <strong>{{contact.firstName}}
+                    {{contact.lastName}}</strong>
                 </div>
+                <div class="text-center">
+                  <img class="contact-avatar" ng-if="contact.pic" ng-src="data:image/JPEG;base64,{{contact.pic}}" /-->
+                  <img class="no-contact-pic" ng-if="!contact.pic" ng-src="img/new_icons/blue_avatar.png"/>
+                  <img ng-show="contact.birthday==today" class="contact-avatar" style="border:0;border-radius:0" ng-src="img/new_icons/happybirthday.gif">
+                </div>
+
               </li>
               <li class="item item-info no-border item-thumbnail-left item-avatar">
                 <div class="item-section">
                   <table class="pele_rtl text-right">
                     <tbody>
                       <tr>
-                        <td class="label">שם פרטי: </td>
-                        <td class="info"> {{contact.firstName}}</td>
+                        <td class="label">שם פרטי:
+                        </td>
+                        <td class="info">
+                          {{contact.firstName}}</td>
                       </tr>
                       <tr>
-                        <td class="label">שם משפחה: </td>
-                        <td class="info"> {{contact.lastName}}</td>
+                        <td class="label">שם משפחה:
+                        </td>
+                        <td class="info">
+                          {{contact.lastName}}</td>
                       </tr>
                       <tr>
-                        <td class="label">פלאפון: </td>
-                        <td class="info"> <a ng-href="tel://{{contact.mobilePhone}}">{{contact.mobilePhone}}</a></td>
+                        <td class="label">פלאפון:
+                        </td>
+                        <td class="info">
+                          <a ng-href="tel://{{contact.mobilePhone}}">{{contact.mobilePhone}}</a>
+                        </td>
                       </tr>
                       <tr>
-                        <td class="label">שלוחה: </td>
-                        <td class="info"> <a ng-href="tel://{{contact.workPhone}}">{{contact.workPhone}} </a></td>
+                        <td class="label">שלוחה:
+                        </td>
+                        <td class="info">
+                          <a ng-href="tel://{{contact.workPhone}}">{{contact.workPhone}}
+                          </a>
+                        </td>
                       </tr>
                       <tr>
-                        <td class="label">דוא"ל: </td>
-                        <td class="info"> {{contact.emailAddress}}</td>
+                        <td class="label">דוא"ל:
+                        </td>
+                        <td class="info">
+                          {{contact.emailAddress}}</td>
                       </tr>
                       <tr>
-                        <td class="label">מיקום: </td>
-                        <td class="info"> {{contact.orgLocation}}</td>
+                        <td class="label">מיקום:
+                        </td>
+                        <td class="info">
+                          {{contact.orgLocation}}</td>
                       </tr>
                       <tr>
-                        <td class="label">ת.לידה: </td>
-                        <td class="info"> {{contact.birthday}}</td>
+                        <td class="label">ת.לידה:
+                        </td>
+                        <td class="info">
+                          {{contact.birthday}}</td>
                       </tr>
                       <tr>
-                        <td class="label">חטיבה: </td>
-                        <td class="info"> {{contact.sector}}</td>
+                        <td class="label">חטיבה:
+                        </td>
+                        <td class="info">
+                          {{contact.sector}}</td>
                       </tr>
                       <tr>
-                        <td class="label">אגף: </td>
-                        <td class="info"> {{contact.section}}</td>
+                        <td class="label">אגף:
+                        </td>
+                        <td class="info" ng-show="contact">
+                          {{contact.section|replace:"no sector":""}}</td>
                       </tr>
                       <tr>
-                        <td class="label">מחלקה: </td>
-                        <td class="info"> {{contact.department}}</td>
+                        <td class="label">מחלקה:
+                        </td>
+                        <td class="info" ng-show="contact">
+                          {{contact.department|replace:"no sector":""}}</td>
                       </tr>
                       <tr>
-                        <td class="label">צוות </td>
-                        <td class="info"> {{contact.team}}</td>
+                        <td class="label">צוות
+                        </td>
+                        <td class="info" ng-show="contact">
+                          {{contact.team|replace:"no sector":""}}</td>
                       </tr>
                     </tbody>
                   </table>
                 </div>
               </li>
               <li class="item item-info no-border contact-icons text-center">
-                <a href="#" ng-click="swalContact(contact)"> <img  class=" pel_icon medium " src="img/new_icons/purple_add_contact.png "></a>
-                <a ng-href="sms://{{contact.mobilePhone}}"> <img  class=" pel_icon medium " src="img/new_icons/blue_sms.png "></a>
-                <a href="#" ng-click="shareViaEmail(contact.emailAddress)"> <img  class=" pel_icon medium " src="img/new_icons/red_email.png "></a>
+                <a href="#" ng-click="swalContact(contact)">
+                  <img class=" pel_icon medium " src="img/new_icons/purple_add_contact.png "></a>
+                <a ng-href="sms://{{contact.mobilePhone}}">
+                  <img class=" pel_icon medium " src="img/new_icons/blue_sms.png "></a>
+                <a href="#" ng-click="shareViaEmail(contact.emailAddress)">
+                  <img class=" pel_icon medium " src="img/new_icons/red_email.png "></a>
                 <a ng-href="tel:{{contact.workPhone}}"><img class=" pel_icon medium " src="img/new_icons/gray_phone.png"></a>
-                <a ng-href="tel:{{contact.mobilePhone}}"> <img  class=" pel_icon medium " src="img/new_icons/green_mobile.png"></a>
-                <!--div class="item-section">
-                  <a href="#" ng-click="shareViaEmail(contact.emailAddress)"> e-mail</a>
-                  <br \>
-                  <a ng-href="sms:{{contact.mobilePhone}}"> <img  class="pel_icon medium" src="img/sms.png"></a>
-                  <br \>
-                  <a href="#" ng-click="shareViaSMS(contact.mobilePhone)"> ng-click  <img  class=" pel_icon medium " src="img/sms.png "></a>
-                  <br \>
-                  <a ng-href="tel:{{contact.mobilePhone}} "> <img class="pel_icon medium " src="img/smartphone.png "></a>
-                  <br \>
-                  <a href="#" ng-click="shareViaWhatsAppToReceiver(contact.mobilePhone)">iver : :<img  class="pel_icon medium " src="img/whatsapp.png "></a>
-                  <br \>
-                  <a href="#" ng-click="shareViaWhatsApp()"> no receiver : <img class="pel_icon medium" src="img/sms.png"></a>
-                </div-->
+                <a ng-href="tel:{{contact.mobilePhone}}">
+                  <img class=" pel_icon medium " src="img/new_icons/green_mobile.png"></a>
+                <!--div class="item-section"> <a href="#" ng-click="shareViaEmail(contact.emailAddress)"> e-mail</a> <br \> <a ng-href="sms:{{contact.mobilePhone}}"> <img class="pel_icon medium" src="img/sms.png"></a> <br \> <a href="#"
+                ng-click="shareViaSMS(contact.mobilePhone)"> ng-click <img class=" pel_icon medium " src="img/sms.png "></a> <br \> <a ng-href="tel:{{contact.mobilePhone}} "> <img class="pel_icon medium " src="img/smartphone.png "></a> <br \> <a href="#"
+                ng-click="shareViaWhatsAppToReceiver(contact.mobilePhone)">iver : :<img class="pel_icon medium " src="img/whatsapp.png "></a> <br \> <a href="#" ng-click="shareViaWhatsApp()"> no receiver : <img class="pel_icon medium" src="img/sms.png"></a> </div-->
               </li>
             </ul>
 
           </ion-scroll>
         </ion-slide>
       </ion-slide-box>
-      </tab-slide-box>
+    </tab-slide-box>
   </ion-content>
   <!-- Footer Actions -->
-  <!-- ion-footer-bar  class="phonebook-footer">
-    <div class="row ">
-      <div class="col col-50 text-center ">
-        <button class="button button-clear button-positive" ui-sref="app.p1_appsLists">
-          <i class="ion-home "></i> תפריט ראשי
-        </button>
-      </div>
-      <div class="col col-50 text-center ">
-        <button class="button button-clear button-positive" ui-sref="app.phonebook">
-      <i class=" ion-search "></i> חיפוש חדש
-      </button>
-      </div>
-    </div>
-  </ion-footer-bar-->
+  <!-- ion-footer-bar class="phonebook-footer"> <div class="row "> <div class="col col-50 text-center "> <button class="button button-clear button-positive" ui-sref="app.p1_appsLists"> <i class="ion-home "></i> תפריט ראשי </button> </div> <div
+  class="col col-50 text-center "> <button class="button button-clear button-positive" ui-sref="app.phonebook"> <i class=" ion-search "></i> חיפוש חדש </button> </div> </div> </ion-footer-bar-->
 </ion-view>
+
+<!--script id="xhappybirthday.html" type="text/ng-template"> <div ng-include="'app/apps/phonebook/happybirthday.html'"></div> </div-->
+</script>
