--- a/www/index.html
+++ b/www/index.html
@@ -1,55 +1,58 @@
 <!DOCTYPE html>
- <html>
+<html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <meta name="format-detection" content="telephone=no">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta name="format-detection" content="telephone=no">
 
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *"> -->
-  <title></title>
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src 'self' 'unsafe-inline' *"> -->
+    <title></title>
 
-  <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
-  <link href="css/pele_style.css" rel="stylesheet">
-  <link href="css/ionic.app.css" rel="stylesheet">
-  <!-- R.W. 11/10/2015 -->
-  <link href="css/tabSlideBox.css" rel="stylesheet">
+    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+    <link href="css/pele_style.css" rel="stylesheet">
+    <link href="css/ionic.app.css" rel="stylesheet">
+    <!-- R.W. 11/10/2015 -->
+    <link href="css/tabSlideBox.css" rel="stylesheet">
 
-  <script src="lib/ionic/js/ionic.bundle.min.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
 
-  <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
-  <script src="lib/ngstorage/ngStorage.min.js"></script>
-  <script src="lib/filelogger/dist/filelogger.min.js"></script>
-  <!-- cordova script (this will be a 404 during development) -->
-  <script src="cordova.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/ngstorage/ngStorage.min.js"></script>
+    <script src="lib/filelogger/dist/filelogger.min.js"></script>
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/contacts-mock.js"></script>
+    <script src="cordova.js"></script>
 
-  <script src="lib/moment.min.js"></script>
-  <script src="lib/lodash.min.js"></script>
-  <script src="lib/ocLazyLoad.min.js"></script>
-  <script src="lib/sweetalert.min.js"></script>
+    <script src="lib/moment.min.js"></script>
+    <script src="lib/lodash.min.js"></script>
+    <script src="lib/ocLazyLoad.min.js"></script>
+    <!--script src="lib/sweetalert.min.js"></script-->
 
-  <!-- your app's js -->
-  <script src="app/app.js"></script>
-  <script src="app/messages.js"></script>
-  <script src="app/states.js"></script>
+    <script src="lib/sweetalert2.all.min.js"></script>
 
-  <script src="app/controllers.js"></script>
-  <script src="app/factories.js"></script>
-  <script src="app/config.js"></script>
-  <script src="app/tabSlideBox.js"></script>
-  <script src="app/services.js"></script>
-  <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
-  <!-------------------------   MENU  ------------------------>
-  <script src="app/P1_appsListsCtrl.js"></script>
-  <!---------------------- Authentication -------------------->
-  <script src="app/authCtrl.js"></script>
-  <!-- Pele PlugIns -->
-  <script src="app/pelePlugins/LaunchMyApp.js"></script>
+    <!-- your app's js -->
+    <script src="app/app.js"></script>
+    <script src="app/messages.js"></script>
+    <script src="app/states.js"></script>
 
-</head>
+    <script src="app/controllers.js"></script>
+    <script src="app/factories.js"></script>
+    <script src="app/config.js"></script>
+    <script src="app/tabSlideBox.js"></script>
+    <script src="app/services.js"></script>
+    <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
+    <!------------------------- MENU ------------------------>
+    <script src="app/P1_appsListsCtrl.js"></script>
+    <!---------------------- Authentication -------------------->
+    <script src="app/authCtrl.js"></script>
+    <!-- Pele PlugIns -->
+    <script src="app/pelePlugins/LaunchMyApp.js"></script>
 
-<body ng-app="pele">
-  <ion-nav-view></ion-nav-view>
-</body>
+  </head>
+
+  <body ng-app="pele">
+    <ion-nav-view></ion-nav-view>
+  </body>
 
 </html>
