--- a/www/app/apps/phonebook/details.html
+++ b/www/app/apps/phonebook/details.html
@@ -28,7 +28,7 @@
     <tab-slide-box tab="1" ng-show="view!='newContact'">
       <div class="tsb-icons">
         <div class="tsb-ic-wrp">
-          <ion-scroll has-bouncing="false" direction="x" scrolly="false" class="tsb-hscroll">
+          <ion-scroll has-bouncing="false" class="tsb-hscroll">
             <!--a href="#" ng-click="swalContact(contact)" class=""> <img class="fab" src="img/new_icons/purple_add_contact.png "></a-->
             <a class="triangle-isosceles">
               עץ ארגוני
@@ -95,7 +95,7 @@
                 </div>
                 <div class="text-center">
                   <img class="contact-avatar" ng-if="contact.pic" ng-src="data:image/JPEG;base64,{{contact.pic}}" /-->
-                  <img class="no-contact-pic" ng-if="!contact.pic" ng-src="img/new_icons/blue_avatar.png"/>
+                  <img class="no-contact-pic" ng-if="!contact.pic" ng-src="img/new_icons/blue_avatar.png" />
                   <img ng-show="contact.birthday==today" class="contact-avatar" style="border:0;border-radius:0" ng-src="img/new_icons/happybirthday.gif">
                 </div>
 
