--- a/www/app/apps/phonebook/details.html
+++ b/www/app/apps/phonebook/details.html
@@ -20,9 +20,10 @@
       </ion-item>
       <div>
         <ion-list class="pele_rtl">
-          <ion-item class="item-text-wrap item-avatar  item-icon-right" ng-repeat="devContact in contatcsList" ng-click="setTargetContact(devContact.id)">{{contact.displayName}} {{targetContactId}} == {{contact.id}}
-            <a class="button button-small button-light" style="margin-right:30px" ng-show="targetContactId==devContact.id" ng-click="addContact(contact,devContact.id)">לחצו לאישור </a>
+          <ion-item class="item-text-wrap item-avatar  item-icon-right" ng-repeat="devContact in contatcsList" ng-click="setTargetContact(devContact.id)">{{contact.name}}
+            <a class="button button-small button-light" style="margin-right:30px" ng-show="targetContactId==devContact.id" ng-click="addContact(contact,null,devContact.id)">לחצו לאישור </a>
             <img class="avatar" ng-if="devContact.photos[0]" src="data:image/JPEG;base64,{{devContact.photos[0].value}} ">
+            <img class="avatar" ng-if="devContact.photos[0].type=='url'" ng-src="{{devContact.photos[0].value}}" src="data:image/JPEG;base64,{{devContact.photos[0].value}} ">
           </ion-item>
         </ion-list>
       </div>
