--- a/www/app/apps/phonebook/details.html
+++ b/www/app/apps/phonebook/details.html
@@ -119,7 +119,7 @@
                           {{contact.lastName}}</td>
                       </tr>
                       <tr>
-                        <td class="label">פלאפון:
+                        <td class="label">נייד:
                         </td>
                         <td class="info">
                           <a ng-href="tel://{{contact.mobilePhone}}">{{contact.mobilePhone}}</a>
