--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
   <script src="lib/ngstorage/ngStorage.min.js"></script>
   <script src="lib/filelogger/dist/filelogger.min.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
-  <!--script src="lib/contacts-mock.js"></script-->
+  <script src="lib/contacts-mock.js"></script>
   <script src="cordova.js"></script>
 
   <script src="lib/moment.min.js"></script>
